--- a/client/src/views/Home/style.module.css
+++ b/client/src/views/Home/style.module.css
@@ -1,11 +1,16 @@
 .Container {
-    margin-top: 50px;
+    margin-top: 80px;
 }
 
-.GridContainer {
-    display: grid;
-    height: 100%;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-gap: 20px;
-    margin-top: 50px;
+.TableContainer {
+    margin: 15px 0px 15px 0px;
+}
+
+.TableCard {
+    border-radius: 10px;    
+}
+
+.Table td{
+    border:none;
+    line-height: 0.3em;
 }
