--- a/client/src/components/FloatingButton/style.module.css
+++ b/client/src/components/FloatingButton/style.module.css
@@ -1,16 +1,16 @@
 .BtnRnd {
-    display: flex !important;
-    justify-content: center !important;
-    align-items: center !important;
-    border-radius: 50% !important;
-    padding: 0 !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    padding: 0;
     height: 50px;
     width: 50px;
     animation: pulse 2s infinite, magnified 1s infinite;
 }
 
 .BtnRnd:hover {
-    animation: none !important;
+    animation: none;
 }
 
 .BtnContainer {
